Termina o desing responsivo para mobile

--- a/md2-solution/index.html
+++ b/md2-solution/index.html
@@ -2,30 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 2</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Our menu</h1>
     <div class="row">
-      <div class="col-lg-1 col-md-1">
+      <div class="col-lg-1 col-md-1 col-sm-1">
         <p id="title-div-chicken" class="title">Chicken</p>
         <section>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </section>
       </div>
-      <div class="col-lg-1 col-md-1">
+      <div class="col-lg-1 col-md-1 col-sm-1">
         <p id="title-div-beef" class="title">Beef</p>
         <section>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </section>
       </div>
-      <div class="col-lg-1 col-md-2">
+      <div class="col-lg-1 col-md-2 col-sm-1">
         <p id="title-div-sushi" class="title">Sushi</p>
         <section>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </section>
-    </div>
+      </div>
     </div>
   </body>
 </html>
